Add downloadable thesis, add PHP to skills, Add Read more feature to some long texts, finish sending mail feature + copy to sender (works from localhost)

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -277,6 +277,18 @@ figure figcaption {
   margin: 0 auto;
 }
 
+#more {
+  display: none;
+}
+
+#more2 {
+  display: none;
+}
+
+a:hover {
+  cursor: pointer;
+}
+
 #colorlib-main {
   width: calc(100% - 300px);
   float: right;
