--- a/public/css/style.css
+++ b/public/css/style.css
@@ -104,7 +104,7 @@ figure figcaption {
   padding-top: 3em;
   padding-bottom: 40px;
   float: left;
-  width: 300px;
+  width: 280px;
   position: fixed;
   overflow-y: scroll;
   z-index: 1001;
@@ -115,12 +115,12 @@ figure figcaption {
 }
 @media screen and (max-width: 768px) {
   #colorlib-aside {
-    width: 300px;
-    -moz-transform: translateX(-300px);
-    -webkit-transform: translateX(-300px);
-    -ms-transform: translateX(-300px);
-    -o-transform: translateX(-300px);
-    transform: translateX(-300px);
+    width: 280px;
+    -moz-transform: translateX(-280px);
+    -webkit-transform: translateX(-280px);
+    -ms-transform: translateX(-280px);
+    -o-transform: translateX(-280px);
+    transform: translateX(-280px);
     padding-top: 4em;
   }
 }
@@ -277,6 +277,10 @@ figure figcaption {
   margin: 0 auto;
 }
 
+a.inverted {
+  color: #4d4e4f;
+}
+
 #more {
   display: none;
 }
@@ -290,7 +294,7 @@ a:hover {
 }
 
 #colorlib-main {
-  width: calc(100% - 300px);
+  width: calc(100% - 280px);
   float: right;
   -webkit-transition: 0.5s;
   -o-transition: 0.5s;
@@ -464,7 +468,7 @@ body.offcanvas #colorlib-aside {
   -ms-transform: translateX(0);
   -o-transform: translateX(0);
   transform: translateX(0);
-  width: 300px;
+  width: 280px;
   background: #f2f3f7;
   z-index: 999;
   position: fixed;
@@ -472,15 +476,15 @@ body.offcanvas #colorlib-aside {
 body.offcanvas #colorlib-main,
 body.offcanvas .colorlib-nav-toggle {
   top: 0;
-  -moz-transform: translateX(300px);
-  -webkit-transform: translateX(300px);
-  -ms-transform: translateX(300px);
-  -o-transform: translateX(300px);
-  transform: translateX(300px);
+  -moz-transform: translateX(280px);
+  -webkit-transform: translateX(280px);
+  -ms-transform: translateX(280px);
+  -o-transform: translateX(280px);
+  transform: translateX(280px);
 }
 
 .colorlib-narrow-content {
-  padding: 0 2.5em;
+  padding: 0 2em;
 }
 @media screen and (max-width: 768px) {
   .colorlib-narrow-content {
@@ -1200,6 +1204,10 @@ body.offcanvas .colorlib-nav-toggle {
   color: #2c98f0;
 }
 
+div.photoperso {
+  padding: 8px;
+}
+
 .project {
   background-size: cover;
   background-position: center center;
@@ -1228,6 +1236,7 @@ body.offcanvas .colorlib-nav-toggle {
   position: relative;
   height: 300px;
 }
+
 .project .desc .con .icon {
   position: absolute;
   bottom: 20px;
