--- a/public/css/bootstrap-nav-tab-scrollable.css
+++ b/public/css/bootstrap-nav-tab-scrollable.css
@@ -38,20 +38,18 @@
 }
 
 ::-webkit-scrollbar:vertical {
-  width: 8px;
+  width: 4px;
 }
 
 ::-webkit-scrollbar:horizontal {
-  height: 8px;
+  height: 4px;
 }
 
 ::-webkit-scrollbar-thumb {
-  background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 4px;
-  border: 2px solid #ffffff;
+  background-color: darkgray;
+  border-radius: 3px;
+  border: 1px solid #ffffff;
 }
 
 ::-webkit-scrollbar-track {
-  border-radius: 4px;
-  background-color: #ffffff;
 }
