Finished work section, new icon, bug fix home buttons, design tweaks

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -337,7 +337,7 @@ a:hover {
   z-index: 1000;
   left: 20px;
   float: left;
-  width: auto;
+  width: 30px;
 }
 @media screen and (max-width: 768px) {
   #colorlib-hero .flexslider .flex-control-nav {
